--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8001
-DATABASE_URL=postgresql://neondb_owner:npg_df4uKGpYlyB2@ep-plain-dawn-a43f24zx-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
-# DATABASE_URL=postgresql://muhammadh.@localhost:5432/pos?sslmode=disable
+# DATABASE_URL=postgresql://neondb_owner:npg_df4uKGpYlyB2@ep-plain-dawn-a43f24zx-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://muhammadh.@localhost:5432/pos?sslmode=disable
 NODE_ENV=development
