--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "happy-dom": "^15.11.7",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
+    "node-thermal-printer": "^4.5.0",
     "pg": "^8.16.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
