--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "escpos": "^3.0.0-alpha.6",
+    "escpos-usb": "^3.0.0-alpha.4",
     "express": "^5.2.1",
     "happy-dom": "^15.11.7",
     "lucide-react": "^0.441.0",
@@ -60,7 +62,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/moment": "^2.13.0",
-    "@types/node": "^22.18.12",
+    "@types/node": "^22.19.3",
     "@types/pg": "^8.16.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
