--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.21.3",
+    "@types/printer": "^0.4.5",
     "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "class-variance-authority": "^0.7.1",
@@ -44,6 +45,7 @@
     "moment": "^2.30.1",
     "node-thermal-printer": "^4.5.0",
     "pg": "^8.16.3",
+    "printer": "^0.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
