--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sweetalert2": "^11.26.17",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
@@ -67,6 +68,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
+    "@types/xlsx": "^0.0.36",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/coverage-istanbul": "^2.1.9",
     "@vitest/ui": "^2.1.9",
