--- a/temp-config.json
+++ b/temp-config.json
@@ -3,6 +3,7 @@
     "output": "release"
   },
   "appId": "com.electron.react.tailwind",
+  "npmRebuild": false,
   "mac": {
     "target": [
       "dmg",
